* Enhanced Citrix devices support

proxy-server-plugin:
* fix #461: Fix XML content-type support for inventories sent by android agent

netdiscovery/netinventory:
* Use Parallel::ForkManager for netdiscovery & netinventory tasks
* Preload mibsupport as optimization

toolbox:
* fix #254: Add credential to iprange not working after adding first one
* Use tabler-icons v 2.24.0

packaging:
* Update MacOSX packages to use OpenSSL 3.1.3 & zlib 1.3
* Install basic-authentication-server-plugin.cfg plugin default configuration on debian
* fix #446: Always add Sys::Hostname dependency to rpm packaging

1.5 Wed, 21 Jun 2023

core:
* Avoid an error with IO::Socket::SSL error reporting on older platform (CentOS7 confirmed)
* Full refactoring of getFileHandle API usage to avoid bottlenecks during remoteinventory
  of libssh2 remotes
* Refactoring of inventory output to share same API between glpi-agent, glpi-inventory and
  glpi-esx
* Introduce GLPI::Agent::XML API based on XML::LibXML to get rid of deprecated XML::TreePP
* fix #242: Fix ca-cert-dir can't be used on win32 & macosx since v1.3
* Export all possible CA & Root certificates from Windows keystore for SSL support
* Fix #257: Also support SSL certificates included in User keystore on windows
* Cache trusted hosts to be able to resolv them in case of DNS resolving failure,
  fixes fusioninventory/fusioninventory-agent#1033
* Refactoring of communication with server to share compressing code between used classes and
  to better report import errors when refused by the server
* Handle early received SIGUSR1 signal as runnow request in place of killing the service
* Report dedicated warning when inventory support is disabled server-side
* win32: Add API to request win32 registry value with better Unicode support
* win32: Get rid of encodeFromRegistry() API after enhanced Unicode registry support
* Get rid of JSON::PP
* fix #393: Support ssl-fingerprint option as a comma-separated list

inventory: