@@ -48,6 +48,7 @@ netdiscovery/netinventory:
 toolbox:
 * fix #254: Add credential to iprange not working after adding first one
 * Use tabler-icons v 2.24.0
+* Store discovered snmp credentials and ip_range in dedicated storage in place of netdisco XML
 
 packaging:
 * Update MacOSX packages to use OpenSSL 3.1.3 & zlib 1.3
